fix deployment & documentation

--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@
             <h1 class="my-4">HR Harmony API Documentation</h1>
             <div id="endpoint" class="anchor">
                 <h2 class="my-4">Endpoint</h2>
-                <p><a href="https://destimate.uc.r.appspot.com/">https://destimate.uc.r.appspot.com/</a></p>
+                <p><a href="https://hr-harmony.uc.r.appspot.com/">https://hr-harmony.uc.r.appspot.com/</a></p>
             </div>
 
             <div id="RegisterAdmin" class="card mb-4">
